--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mnewbigging.github.io/wordbash",
   "name": "project-template",
   "version": "1.0.0",
   "description": "Project template with webpack, react, typescript, sass and mobx",
@@ -7,7 +8,9 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "react",
@@ -36,6 +39,7 @@
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.6.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.14.1",
